<resources>
    <string name="app_name">Good Places</string>
    <string name="photos">Fotos</string>
    <string name="about">Sobre</string>
    <string name="business_hours">Horário de funcionamento</string>
    <string name="address">Endereço</string>
    <string name="contact">Contato</string>
    <string name="reviews">Reviews</string>
    <string name="see_all_reviews">ver todos os %d reviews</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="more">More</string>
    <string name="empty" />
    <string name="error_occurred">Ocorreu um erro</string>

    <string-array name="weekdays">
        <item>dom</item>
        <item>seg</item>
        <item>ter</item>
        <item>qua</item>
        <item>qui</item>
        <item>sex</item>
        <item>sab</item>
    </string-array>
</resources>