<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/istockphoto"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:contentDescription="@string/app_name" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/topaz"
                android:paddingStart="16dp"
                app:layout_anchor="@id/appbar"
                app:layout_anchorGravity="bottom"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/title"
                    style="@style/Detail.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Padaria Pelicano" />

                <RatingBar
                    android:id="@+id/rating"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:ignore="RtlSymmetry"
                    tools:rating="3.5" />

                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/rating"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="3.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="26dp"
                app:layout_anchor="@id/header"
                app:layout_anchorGravity="bottom">

                <TextView
                    android:id="@+id/photos_title"
                    style="@style/GoodPlaces.TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/photo_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photos_title"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_photo_gallery" />

                <TextView
                    android:id="@+id/about"
                    style="@style/GoodPlaces.TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_32"
                    android:text="@string/about"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photo_gallery" />

                <TextView
                    android:id="@+id/about_content"
                    style="@style/GoodPlaces.TextStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about"
                    tools:text="Se você curte um pão fresquinho, ou uma sobremesa caprichada, você precisa incluir uma visitinha a Padaria Pelicano no seu roteiro por BH. A fila é gigantesca, mas os quitutes estão sem dúvida entre os melhores da cidade. " />

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:src="@drawable/time"
                    android:contentDescription="@string/business_hours"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_content" />

                <TextView
                    android:id="@+id/time_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_8"
                    style="@style/GoodPlaces.TextStyleInfo"
                    app:layout_constraintStart_toEndOf="@+id/time_icon"
                    app:layout_constraintTop_toTopOf="@+id/time_icon"
                    tools:text="seg a sex: 7h às 23h\nsáb e dom: 8h às 20h" />

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_content" />

                <TextView
                    android:id="@+id/phone_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_8"
                    style="@style/GoodPlaces.TextStyleInfo"
                    app:layout_constraintStart_toEndOf="@+id/phone_icon"
                    app:layout_constraintTop_toTopOf="@+id/phone_icon"
                    tools:text="+55 31 98892 5338" />

                <ImageView
                    android:id="@+id/pin_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:src="@drawable/pin"
                    android:contentDescription="@string/address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_content" />

                <TextView
                    android:id="@+id/address_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_8"
                    style="@style/GoodPlaces.TextStyleInfo"
                    app:layout_constraintStart_toEndOf="@+id/pin_icon"
                    app:layout_constraintTop_toTopOf="@+id/pin_icon"
                    tools:text="Rua do ouro, 297 - Serra\nBelo Horizonte - MG" />

                <TextView
                    android:id="@+id/reviews_title"
                    style="@style/GoodPlaces.TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_32"
                    android:text="@string/reviews"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comment_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reviews_title"
                    app:layout_constraintBottom_toTopOf="@+id/see_all_comments"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/comment_list_item"
                    tools:itemCount="3" />

                <LinearLayout
                    android:id="@+id/see_all_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_32"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="4dp"
                        android:gravity="right"
                        android:text="@string/see_all_reviews"
                        style="@style/GoodPlaces.SeeAllCommentTextTitle"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="end|center_vertical"
                        android:adjustViewBounds="true"

                        android:layout_weight="0.1"
                        android:src="@drawable/arrows"
                        android:contentDescription="@string/see_all_reviews"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>